[package]
name = "geoplaces"
version = "1.0.1-alpha.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "Query OpenStreetMap for geolocation information of any place."
license = "MIT"
homepage = "https://github.com/badboy/geoplaces"
edition = "2018"

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
url = "1.7.2"
isahc = { version = "0.7.1", default-features = false, features = ["http2", "json"] }
http = "0.1.18"
percent-encoding = "2.1.0"
